# ControlFlow

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  all_files.md  concat-docs.md  mkdocs.yml  mypy.ini  output.md  pyproject.toml
.github/: ai-labeler.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  enhancement.yml
.github/workflows/: codeql.yml  publish-pypi.yml  run-tests.yml  static-analysis.yml
docs/: concepts.mdx  index.md  installation.mdx  introduction.mdx  mint.json  quickstart.mdx  script.js  style.css  style_guide.mdx  tutorial.mdx  welcome.mdx
docs/blog/: agentic-loop.mdx  tasks-and-agents.mdx
docs/concepts/: agents.md  agents.mdx  concepts.mdx  execution.mdx  flows.md  flows.mdx  iteration.md  loop.mdx  tasks-concepts.mdx  tasks.md  tasks.mdx  teams.mdx  workflow-design.mdx
docs/concepts/agents/: agents.mdx  assigning-agents.mdx  collaborating-agents.mdx  creating-agents.mdx
docs/concepts/flows/: creating-flows.mdx  flows.mdx  instructions.mdx
docs/concepts/tasks/: configuring-tasks.mdx  creating-tasks.mdx  result-types.mdx  running-tasks.mdx  task-results.mdx  tasks.mdx
docs/examples/: agent-engineer.mdx  anonymization.mdx  call-routing.mdx  code-explanation.mdx  examples-guide.md  generate-people.mdx  headline-categorization.mdx  language-tutor.mdx  library.mdx  named-entity-recognition.mdx  pineapple-pizza.mdx  rock-paper-scissors.mdx  rock_paper_scissors.mdx  seinfeld-conversation.mdx  sentiment-classifier.mdx  standardize-addresses.mdx  summarization.mdx  translation.mdx
docs/examples/features/: dependent-tasks.mdx  early-termination.mdx  memory.mdx  multi-llm.mdx  private-flows.mdx  tools.mdx
docs/glossary/: agent.mdx  agentic-workflow.mdx  agentic-workflows.mdx  agents.mdx  cf-agent.mdx  cf-flow.mdx  dependencies.mdx  fine-tuning.mdx  flow-engineering.mdx  flow-orchestration.mdx  flow.mdx  glossary.mdx  llm.mdx  task-orchestration.mdx  task.mdx  tools.mdx  workflow.mdx
docs/guides/: agentic-loop.mdx  apis.mdx  best_practices.md  configure-llms.mdx  default-agent.mdx  default-memory.mdx  dependencies.mdx  deployment.mdx  event-log.mdx  execution-modes.mdx  llms.mdx  monitoring.mdx  orchestration.mdx  planning.mdx  settings.mdx  subtasks.mdx  why-tasks.mdx  workflow-apis.mdx
docs/llm-guides/: llm-guide.md  style-guide.md
docs/patterns/: collaboration.mdx  dependencies.mdx  execution-modes.mdx  history.mdx  instructions.mdx  interactivity.mdx  memory.mdx  planning.mdx  result-types.mdx  running-tasks.mdx  stopping-tasks-early.mdx  streaming-tasks.mdx  streaming.mdx  subtasks.mdx  task-results.mdx  tools.mdx  user-input.mdx  workflow-apis.mdx
docs/reference/: task-class.mdx  task-decorator.mdx
docs/snippets/: installation.mdx  version-badge.mdx
examples/: anonymization.py  asyncpg-memory.py  business_headline_sentiment.py  call_routing.py  choose_a_number.py  code_explanation.py  controlflow_docs.py  deploy.py  documentation.py  early_termination.py  generate_people.py  headline_categorization.py  language_tutor.py  memory.py  memory_between_flows.py  multi_agent_conversation.py  named_entity_recognition.py  pg-memory.py  pineapple_pizza.py  poem.py  prefect-deploy.Dockerfile  prefect_deploy.py  private_flows.py  read-hn.Dockerfile  read_hn.py  readme_example.py  reasoning.py  restaurant_recs.py  rock_paper_scissors.py  seinfeld.py  sentiment_classifier.py  standardize_addresses.py  summarization.py  task_dag.py  teacher_student.py  translation.py  write_and_critique_paper.py
examples/engineer/: engineer.py  instructions.md  prompt.md
examples/slackbot/: Dockerfile  agents.py  custom_types.py  graph.py  main.py  moderation.py  requirements.txt  settings.py  tools.py
examples/slackbot/resources/: graph-config.yaml  graph.yaml  ingress.yaml  slackbot-config.yaml  slackbot.yaml
mintlify/: concepts.mdx  installation.mdx  introduction.mdx  mint.json
mintlify/concepts/: flows.mdx
mintlify/glossary/: flow-orchestration.mdx  flow.mdx  glossary.mdx  prompt-engineering.mdx  task-orchestration.mdx  workflow.mdx
src/control_flow/: __init__.py  agent.py  agent_old.py  delegation.py  dx.py  flow.py  instructions.py  loops.py  settings.py  task.py
src/control_flow/agents/: agents.py
src/control_flow/controller/: __init__.py  controller.py  delegation.py  instruction_template.py
src/control_flow/core/: __init__.py  agent.py  flow.py  graph.py  task.py
src/control_flow/utilities/: context.py  logging.py  marvin.py  prefect.py  threads.py  types.py
src/controlflow/: __init__.py  agent_strategies.py  decorators.py  defaults.py  dx.py  instructions.py  loops.py  moderators.py  plan.py  run.py  settings.py  stream.py
src/controlflow/agents/: __init__.py  agent.py  agents.py  memory.py  names.py  teams.py
src/controlflow/cli/: dev.py  main.py
src/controlflow/controllers/: controller.py  graph.py  (+3 more)
tests/: conftest.py  test_decorator.py  test_decorators.py  test_defaults.py  test_instructions.py  test_planning.py  test_run.py  test_settings.py  test_turn_strategies.py
tests/agents/: test_agents.py  test_teams.py
tests/ai_tests/: test_tasks.py
tests/cli/: test_cli.py
tests/controllers/: test_graph.py
tests/core/: agents.py  test_agents.py  test_controller.py  test_flows.py  test_graph.py  test_tasks.py
tests/deprecated/: test_agent.py  test_task.py
tests/events/: test_history.py
tests/fixtures/: __init__.py  controlflow.py  controlflow_fixtures.py  flows.py  instructions.py  mocks.py
tests/flows/: test_flows.py  test_graph.py  test_sign_guestbook.py  test_user_access.py
tests/fns/: test_run.py
tests/llm/: test_completions.py  test_handlers.py  test_messages.py  test_models.py  test_streaming.py  test_tools.py
tests/memory/: test_memory.py
tests/orchestration/: test_agent_context.py  test_controller.py  test_orchestrator.py  test_rules.py  test_turn_strategies.py
tests/tasks/: test_decorator.py  test_deprecated.py  test_tasks.py  test_validators.py
tests/tools/: test_lc_tools.py  test_tools.py
tests/utilities/: test_general.py  test_testing.py
(+126 files in other folders)
