[project]
name = "controlflow"
version = "0.3.0"
description = "A framework for agentic workflows"
authors = [
    { name = "Jeremiah Lowin", email = "153965+jlowin@users.noreply.github.com" },
]
dependencies = [
    "marvin @ git+https://github.com/prefecthq/marvin@main",
    "prefect[dev] @ git+https://github.com/prefecthq/prefect@main",
    # can remove when prefect fully migrates to pydantic 2
    "pydantic>=2",
    "textual>=0.61.1",
    "litellm>=1.37.17",
    "numpydoc>=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.9"
keywords = [
    "ai",
    "chatbot",
    "llm",
    "ai orchestration",
    "llm orchestration",
    "agentic workflows",
    "flow engineering",
    "prefect",
    "workflow",
    "orchestration",
    "python",
    "GPT",
    "openai",
    "assistant",
    "agents",
    "AI agents",
    "natural language processing",
]

[project.urls]
Code = "https://github.com/jlowin/ControlFlow"

[project.optional-dependencies]
tests = [
    "pytest-asyncio>=0.18.2,!=0.22.0,<0.23.0",
    "pytest-env>=0.8,<2.0",
    "pytest-rerunfailures>=10,<14",
    "pytest-sugar>=0.9,<2.0",
    "pytest>=7.0",
    "pytest-timeout",
    "pytest-xdist",
    "pre-commit>=3.7.0",
    "pandas",
]
dev = ["controlflow[tests]", "ipython", "pdbpp", "ruff>=0.3.4", "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/controlflow"]

# ruff configuration
[tool.ruff]
target-version = "py311"
lint.extend-select = ["I"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # default, but here in case we want to change it

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F401', 'F403']
"src/controlflow/utilities/types.py" = ['F401']

[tool.pytest.ini_options]
timeout = 120
